# ChangeLog for net-misc/asterisk-app_nv_faxdetect
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/asterisk-app_nv_faxdetect/Attic/ChangeLog,v 1.3 2005/07/08 20:51:18 dholm Exp $

  08 Jul 2005; David Holm <dholm@gentoo.org>
  asterisk-app_nv_faxdetect-1.0.6.ebuild:
  Added to ~ppc.

  29 Jun 2005; Stefan Knoblich <stkn@gentoo.org> :
  Modified DESCRIPTION, making it more clear this ebuild contains both detect
  apps

*asterisk-app_nv_faxdetect-1.0.6 (31 May 2005)

  31 May 2005; Stefan Knoblich <stkn@gentoo.org> +metadata.xml,
  +files/app_nv_faxdetect-1.0.6-astcfg.diff,
  +files/app_nv_faxdetect-1.0.6-aststable.diff,
  +asterisk-app_nv_faxdetect-1.0.6.ebuild:
  Initial import. Thanks to Josef, Joe Stroller and of course
  Justin Newman (Newmantelecom).
