@@ -1,6 +1,6 @@
-MD5 2939da291690c3a40fd4b1a24d62334d ChangeLog 826
-MD5 27205340b5eaff02bf40b34e287602c8 asterisk-app_nv_faxdetect-1.0.6.ebuild 1168
 MD5 56f78a41386fa9e15d7ec06b20cf00c3 metadata.xml 407
+MD5 9136507d5206ce0f3e5a4e00183bd4b1 ChangeLog 963
+MD5 f66ac38c5f0b266de6ea0ab476648a08 asterisk-app_nv_faxdetect-1.0.6.ebuild 1305
+MD5 46236880a0a0dab5f08b8708bfbf08a5 files/digest-asterisk-app_nv_faxdetect-1.0.6 73
 MD5 2c6790a54c98bb042028e5ed2a6a4ad0 files/app_nv_faxdetect-1.0.6-astcfg.diff 988
 MD5 bff6abdbd28ddbb349dacdd62f346851 files/app_nv_faxdetect-1.0.6-aststable.diff 1000
-MD5 46236880a0a0dab5f08b8708bfbf08a5 files/digest-asterisk-app_nv_faxdetect-1.0.6 73
