@@ -1,6 +1,10 @@
 # ChangeLog for net-misc/asterisk-app_nv_faxdetect
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/asterisk-app_nv_faxdetect/Attic/ChangeLog,v 1.3 2005/07/08 20:51:18 dholm Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/asterisk-app_nv_faxdetect/Attic/ChangeLog,v 1.4 2005/08/16 16:39:19 stkn Exp $
+
+  16 Aug 2005; Stefan Knoblich <stkn@gentoo.org>
+  asterisk-app_nv_faxdetect-1.0.6.ebuild:
+  Made ebuild ready for asterisk-1.2.0(_pre).
 
   08 Jul 2005; David Holm <dholm@gentoo.org>
   asterisk-app_nv_faxdetect-1.0.6.ebuild:
